[gd_scene load_steps=7 format=2]

[ext_resource path="res://player/Player.tscn" type="PackedScene" id=1]
[ext_resource path="res://Main.gd" type="Script" id=2]
[ext_resource path="res://hud/HUD.tscn" type="PackedScene" id=3]
[ext_resource path="res://art/gameover.wav" type="AudioStream" id=4]
[ext_resource path="res://art/House In a Forest Loop.ogg" type="AudioStream" id=5]

[sub_resource type="Curve2D" id=1]
_data = {
"points": PoolVector2Array( 0, 0, 0, 0, 480, 0, 0, 0, 0, 0, 480, 720, 0, 0, 0, 0, 0, 720, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 480, 0 )
}

[node name="Main" type="Node"]
script = ExtResource( 2 )

[node name="Player" parent="." instance=ExtResource( 1 )]
position = Vector2( 240, 128 )

[node name="VirusTimer" type="Timer" parent="."]
wait_time = 0.5

[node name="ScoreTimer" type="Timer" parent="."]

[node name="StartTimer" type="Timer" parent="."]
one_shot = true

[node name="StartPosition" type="Position2D" parent="."]
position = Vector2( 240, 450 )

[node name="Path2D" type="Path2D" parent="."]
curve = SubResource( 1 )
__meta__ = {
"_edit_group_": true
}

[node name="VirusPath" type="PathFollow2D" parent="Path2D"]
position = Vector2( 480, 0 )
rotation = 1.5708

[node name="HUD" parent="." instance=ExtResource( 3 )]

[node name="BackGroud" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 5 )

[node name="DeadSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 4 )
[connection signal="hit" from="Player" to="." method="_on_Player_hit"]
[connection signal="timeout" from="VirusTimer" to="." method="_on_VirusTimer_timeout"]
[connection signal="timeout" from="ScoreTimer" to="." method="_on_ScoreTimer_timeout"]
[connection signal="timeout" from="StartTimer" to="." method="_on_StartTimer_timeout"]
[connection signal="start_game" from="HUD" to="." method="_on_HUD_start_game"]
